--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
 nilearn==0.9.0
 matplotlib
 pybids
+psutil
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==1.8.1+cpu
+torchvision==0.9.1
+--find-links https://pytorch-geometric.com/whl/torch-1.8.0+cpu.html
+torch-cluster
+torch-scatter
+torch-sparse
+torch-geometric
+./gcn_package
