--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 nilearn==0.9.0
 matplotlib
 pybids
-psutil
+psutil==5.8.0
 --find-links https://download.pytorch.org/whl/torch_stable.html
-torch==1.8.1+cpu
+torch==1.9.0+cpu
 torchvision==0.9.1
---find-links https://pytorch-geometric.com/whl/torch-1.8.0+cpu.html
+--find-links https://data.pyg.org/whl/torch-1.9.0+cpu.html
 torch-cluster
 torch-scatter
 torch-sparse
 torch-geometric
 ./gcn_package
+pytest
